// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SignUpPage renders page 1`] = `
<Fragment>
  <DocumentHead
    title="Sign up"
  />
  <Row
    align="middle"
    className="h-100"
    justify="center"
    type="flex"
  >
    <ForwardRef>
      <p>
        Please let us know your e-mail address to complete your account registration.
      </p>
      <SingUpForm
        loading={false}
        onSubmit={[MockFunction]}
      />
    </ForwardRef>
  </Row>
</Fragment>
`;

exports[`SignUpPage renders page with errors 1`] = `
<Fragment>
  <DocumentHead
    title="Sign up"
  />
  <Row
    align="middle"
    className="h-100"
    justify="center"
    type="flex"
  >
    <ForwardRef>
      <p>
        Please let us know your e-mail address to complete your account registration.
      </p>
      <SingUpForm
        loading={false}
        onSubmit={[MockFunction]}
      />
    </ForwardRef>
  </Row>
</Fragment>
`;

exports[`SignUpPage renders page with loading 1`] = `
<Fragment>
  <DocumentHead
    title="Sign up"
  />
  <Row
    align="middle"
    className="h-100"
    justify="center"
    type="flex"
  >
    <ForwardRef>
      <p>
        Please let us know your e-mail address to complete your account registration.
      </p>
      <SingUpForm
        loading={true}
        onSubmit={[MockFunction]}
      />
    </ForwardRef>
  </Row>
</Fragment>
`;
